--- a/styles/otras.css
+++ b/styles/otras.css
@@ -1,8 +1,17 @@
-.opciones {
-    font-size: 13px;
+.accordion-item .accordion-button {
+    font-size: 15px;
     font-family: Arial, Helvetica, sans-serif;
     cursor: pointer;
     color: blue;
+}
+
+.accordion-item .accordion-body{
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: white;
+    color: black;
+    cursor: pointer;
+    font-size: 13px;
+
 }
 
 .otras{
