--- a/styles/index.css
+++ b/styles/index.css
@@ -18,14 +18,14 @@ main {
 }
 
 .contenido {
-    height: 75%;
+    height: 75rem;
     background: rgb(252, 252, 252);
     margin: 1em;
 }
 
 
 .cuentas {
-    height: 40rem;
+    height: 45rem;
     width: 62%;
     background: rgb(252, 252, 252);
     float: left;
@@ -85,17 +85,41 @@ main {
     width: 50%;
     height: 40rem;
     background: rgb(255, 255, 255);
-    float: left;
+    flex-flow: left;
 }
 
 .articulo3 {
     height: 40rem;
     background: rgb(255, 255, 255);
-    float: right;
+    flex: auto;
     width: 25%;
-    margin-right: 25%;
     border: 2px solid rgb(255, 255, 255);
     
+}
+
+.botonver {
+    background-color: rgb(50, 167, 240);
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 25%;
+    text-align: auto;
+    border: none;
+    outline: none;
+    transition: 0.1s;
+    flex: auto;
+}
+
+.active, .botonver:hover {
+    background-color: rgb(41, 122, 197);
+}
+
+
+.botonver h1 {
+    font-size: 2rem;
+    text-align: top;
+    float: center;
+
 }
 
 .articulo3 h3 {
@@ -122,21 +146,6 @@ main {
     
 }
 
-.pin {
-    width: 40rem;
-    height: 10%;
-    margin: 1em;
-    background:  rgb(255, 255, 255);
-    border-radius: 0.5em;
-}
-
-.pin h2 {
-    margin-top: 10px;
-    font-weight: 100;
-    margin-left: 1rem;
-    color: rgb(8, 8, 142);
-}
-
 .cuentas h1{
     margin-top: 40px;
     font-weight: 100;
@@ -144,18 +153,57 @@ main {
     color: rgb(51, 51, 194);
 }
 
-.content-img {
-    width: 30px;
-    height: 30px;
-    display: flex;
-    object-fit: cover;
-    justify-content: center;
-    align-items: center;
-}
-.content-img img{
+.accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
     width: 100%;
-    height: 100%;
-    margin: 75rem;
-    margin-right: 10px;
+    text-align: left;
+    border: none;
+    outline: none;
+    transition: 0.4s;
+  }
+
+
+.accordion h2 {
+    font-size: 1rem;
+}
+  
+.panel {
+    padding: 0 18px;
+    display: none;
+    background-color: rgb(217, 217, 217);
+    overflow: hidden;
+  }
+
+.panel p {
+    margin-top: 1rem;
+    margin-left: 1rem;
+    font-size: 1.1rem;
 }
 
+#main-container{
+			text-align: right;
+            margin-right: 1.5em;
+		}
+
+		.btn{
+			border-radius: 0.5em;
+			display: inline-block;
+			padding: 20px 15px;
+			text-decoration: none;
+			text-shadow: 0 1px 0 rgba(255,255,255,0.3);
+			box-shadow: 0 1px 1px rgba(0,0,0,0.3); 
+		}
+
+		.btn-green{
+			color: white;
+			background-color: #3CC93F;
+		}
+		.btn-green:hover{
+			background-color: #37B839;	
+		}
+		.btn-green:active{
+			background-color: #29962A;
+		}
