--- a/styles/homebanking.css
+++ b/styles/homebanking.css
@@ -15,8 +15,30 @@
     display: flex;
     justify-content: flex-end;
     width: 100%;
+    font-weight: bold;
 }
 
+.form-check {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 10px;
+}
+
+.form-check-label {
+    margin-left: 5px;
+}
+
+.nav-item {
+    display: flex;
+    align-items: center;
+    margin: 0px 10px 0px 10px;
+}
+
+.nav-icon {
+    height: 1.5em;
+    width: 1.5em;
+}
 .welcome-back .container {
     background: linear-gradient(90deg, rgba(2,86,138,1) 0%, rgba(111,157,185,1) 100%);
     color: white;
@@ -32,11 +54,20 @@
 }
 
 .cant-dinero {
-    font-size: 1.1rem;
+    font-size: 1.5rem;
 }
 
 .bloque-cuenta {
     border-left: 5px solid white;
+}
+
+/** contenedor chart**/
+.perfilgraf {
+    height: fit-content;
+}
+
+#myChart {
+    margin-right: 0.5rem;
 }
 
 /*********************** Dgamez Cuentas ***********************/
@@ -305,10 +336,6 @@ main {
 .cuentas {
     justify-content: flex-start;
     padding: 25px;
-}
-
-.perfilgraf {
-    /*  */
 }
 
 .otrasop {
