Valores del Dolar
DOLAR HOY

--- a/styles/conversor.css
+++ b/styles/conversor.css
@@ -1,4 +1,4 @@
-:root {
+/*:root {
     --primary: #2776b3;
     --secondary: #3f93d3;
     --light: #fff;
@@ -138,3 +138,4 @@ p {
     margin-top: 3px;
     font-size: 1.5rem;
 }
+/
