--- a/styles/conversor.css
+++ b/styles/conversor.css
@@ -159,3 +159,12 @@ p {
     margin-top: 3px;
     font-size: 1.5rem;
 }
+
+#cantidad-uno {
+    cursor: pointer;
+}
+#cantidad-dos {
+    cursor: pointer;
+}
+
+
