--- a/Django/itbank/Homebanking/templates/Homebanking/conversor.html
+++ b/Django/itbank/Homebanking/templates/Homebanking/conversor.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,14 +7,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/conversor.css">
+    <link rel="stylesheet" href="{% static 'Homebanking/css/conversor.css' %}">
     <title>Conversor</title>
 </head>
 
 <body>
     <div class="GContainer">
         <div class="volver">
-            <a href="homebanking.html">Volver</a>
+            <a href="{% url 'homebanking' %}">Volver</a>
         </div>
         <h1>Conversor de monedas</h1>
         <p>Seleccione moneda y cantidad para su conversión:</p>
@@ -56,7 +58,7 @@
         </div>
         <div class="cambio" id="cambio"></div>
     </div>
-    <script src="js/conversor.js"></script>
+    <script src="{% static 'Homebanking/js/conversor.js' %}"></script>
 </body>
 
 </html>
