--- a/Django/itbank/Homebanking/templates/Homebanking/homebanking.html
+++ b/Django/itbank/Homebanking/templates/Homebanking/homebanking.html
@@ -25,9 +25,7 @@
 					<a class="navbar-brand" href="{% url 'homebanking' %}">
 					<img class="logo" src="{% static 'Homebanking/images/itbank.png' %}" alt="ITBANK">
 					</a>
-					<span class="navbar-text">
-					Mi cuenta
-					</span>
+				
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 					</button>
@@ -44,6 +42,9 @@
 							<li class="nav-item">
 								<img class="nav-icon" src="{% static 'Homebanking/images/ayuda.png' %}">
 								<a class="nav-link" href="{% url 'homebanking' %}">Ayuda</a>
+							</li>
+							<li>
+								<a class="nav-link" href="{% url 'logout' %}">Cerrar Sesión</a>
 							</li>
 						</ul>
 					</div>
@@ -156,10 +157,9 @@
 				<div class="perfil">
 					<div class="cuadrado">
 						<div class="contenedor-img">
-							<img src="https://www.saramusico.com/wp-content/uploads/2016/11/book-profesional-fotos-profesionales0025.jpg" alt="">
+							<img src="{% static 'Homebanking/images/cuenta.png' %}" alt="">
 						</div>
-						<label class="label-1"><b>Jane Doe</b></label>
-						<label class="label-2">San Francisco - USA</label>
+						<label class="label-1"><b>{{ user.username }}</b></label>
 						<a href="#" style="text-decoration: none;">Configuración de perfil</a>
 					</div>
 					<div class="contenedor-cuadrado-23">
