--- a/Django/itbank/Homebanking/static/Homebanking/css/conversor.css
+++ b/Django/itbank/Homebanking/static/Homebanking/css/conversor.css
@@ -10,6 +10,58 @@
     box-sizing: border-box;
     font-family: 'Lato', sans-serif;
 }
+
+body {
+    /* display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    padding: 20px; */
+    margin: 0;
+    background-color: var(--diabled);
+}
+
+/*********************** Vickyd Header ***********************/
+
+.logo {
+    max-width: 150px;
+}
+
+#navbarText ul{
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    font-weight: bold;
+}
+
+.form-check {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 10px;
+}
+
+.form-check-label {
+    margin-left: 5px;
+}
+
+.nav-item {
+    display: flex;
+    align-items: center;
+    margin: 0px 10px 0px 10px;
+}
+
+.nav-icon {
+    height: 1.5em;
+    width: 1.5em;
+}
+
+.username {
+    align-self: flex-start;
+}
+/*********************** Fin Vickyd Header ***********************/
+
 .volver {
     margin-top: 20px;
 }
@@ -22,31 +74,23 @@
     border-radius: 5px;
     text-align: left;
 }
-body {
-    display: flex;
-    flex-direction: column;
-    font-family: 'Lato', sans-serif;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin: 0;
-    padding: 20px;
-    background-color: var(--diabled);
-}
 
 .GContainer {
     background-color: rgb(245, 245, 245);
     padding: 40px;
     padding-top: 20px;
     padding-bottom: 100px;
-    max-width: 810px;
+    width: 40%;
+    margin: 15px auto;
+    min-width: 525px;
+    max-width: 650px;
     border-radius: 15px;
-    
-
 }
-h1{
+h1 {
+    margin-top: 1rem;
     margin-bottom: 1rem;
     font-size: 2rem;
+    font-weight: bold;
 
 }
 
@@ -158,6 +202,15 @@ p {
 }
 #cantidad-dos {
     cursor: pointer;
+}
+
+.footer-cont {
+    background-color: white;
+    max-width:none;
+    margin-bottom: 0;
+}
+.footer-cont section.mb-4 {
+    background-color: white;
 }
 
 
