--- a/Django/itbank/Homebanking/templates/Homebanking/gastos.html
+++ b/Django/itbank/Homebanking/templates/Homebanking/gastos.html
@@ -8,11 +8,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de tareas</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400;900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    
     <link rel="stylesheet" href="{% static 'Homebanking/css/gastos.css' %}">
     
     <script src="{% static 'Homebanking/js/gastos.js' %}" type="text/javascript" defer></script>
 </head>
 <body>
+    <header class="navbar-section">
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="{% url 'homebanking' %}">
+                <img class="logo" src="{% static 'Homebanking/images/itbank.png' %}" alt="ITBANK">
+                </a>
+                <span class="navbar-text">{{ user.username }}</span>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <img class="nav-icon" src="{% static 'Homebanking/images/inicio.png' %}">
+                            <a class="nav-link active" aria-current="page" href="{% url 'homebanking' %}">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <img class="nav-icon" src="{% static 'Homebanking/images/notifs.png' %}">
+                            <a class="nav-link" href="{% url 'homebanking' %}">Notificaciones</a>
+                        </li>
+                        <li class="nav-item">
+                            <img class="nav-icon" src="{% static 'Homebanking/images/ayuda.png' %}">
+                            <a class="nav-link" href="{% url 'homebanking' %}">Ayuda</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="{% url 'logout' %}">Cerrar Sesión</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
     <div class="list roundBorder">
         <a class="volver" href="{% url 'homebanking' %}">Volver</a>
         <h1>Lista de gastos</h1>
@@ -104,6 +141,30 @@
             </div>
         </section>
     </div>
-  
-</body>
+    <!-- Gabyesca Footer -->
+    <footer class="bg-light text-center">
+        <div class=" footer-cont container p-4">
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="{% static 'Homebanking/images/itbank.png' %}" alt="itbank" width="200px" height="50px" >
+                </div>
+                <div class="col-md-6">
+                    <section class="mb-4">
+                        <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="#!" role="button"><i class="bi bi-facebook"></i></a>
+                        <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee" href="#!" role="button"><i class="bi bi-twitter"></i></a>
+                        <a class="btn btn-primary btn-floating m-1" style="background-color: #dd4b39" href="#!" role="button"><i class="bi bi-google"></i></a>
+                        <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac" href="#!" role="button"><i class="bi bi-instagram"></i></a>
+                        <a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca" href="#!" role="button"><i class="bi bi-linkedin"></i></a>
+                    </section>
+                    <!-- Section: Social media -->  
+                </div>
+            </div>
+        </div>
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background: linear-gradient(90deg, rgba(2,86,138,1) 0%, rgba(111,157,185,1) 100%); color: white">
+            © 2022 Copyright: ITBANK
+            <a href="{% url 'homebanking' %}" style="color: lightblue"> itbank.com</a>
+        </div>
+    </footer>
+    </body>
 </html>
