feat: integrada pagina de prestamos

--- a/Django/itbank/Homebanking/templates/Homebanking/conversor.html
+++ b/Django/itbank/Homebanking/templates/Homebanking/conversor.html
@@ -13,7 +13,7 @@
 
 
     <link rel="stylesheet" href="{% static 'Homebanking/css/conversor.css' %}">
-    <title>Conversor</title>
+    <title>ITBANK - Conversor</title>
 </head>
 
 <body>
