--- a/Django/itbank/Homebanking/templates/Homebanking/homebanking.html
+++ b/Django/itbank/Homebanking/templates/Homebanking/homebanking.html
@@ -197,7 +197,7 @@
 						</div>
 						<p>Transferir</p>
 					</a>
-					<a class="opcion">
+					<a class="opcion" href="{% url 'prestamos' %}"">
 						<div class="opcion-icon">
 							<img src="{% static 'Homebanking/images/prestamo.png' %}" alt="">
 						</div>
