--- a/Django/itbank/Homebanking/templates/Homebanking/gastos.html
+++ b/Django/itbank/Homebanking/templates/Homebanking/gastos.html
@@ -77,7 +77,7 @@
         <div id="tasksContainer"></div>
     </div>
     <div class="container">
-        <h1>Divisor de gastos (Con propina) </h1>
+        <h1>ITBANK - Divisor de gastos (Con propina) </h1>
         <section>
             <div class="wrapper">
                 <label for="bill" class="lbl">
